add order component view

--- a/farmersmaket/src/index.html
+++ b/farmersmaket/src/index.html
@@ -38,6 +38,16 @@
   </head>
   <body>
      <!--====== PRELOADER PART START ======-->
+         <!--====== PRELOADER PART START ======-->
+    
+    <div class="preloader">
+      <div class="spin">
+          <div class="cube1"></div>
+          <div class="cube2"></div>
+      </div>
+  </div>
+  
+  <!--====== PRELOADER PART START ======-->
     <app-root></app-root>
      <!--====== jquery js ======-->
      <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
